--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -1,10 +1,188 @@
 * {
 	box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 body{
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #A43E3E;
+	background-color: #242424;
+	background-image: url('Imagenes/fondo_madera.jpg');
+}
+
+header{
+	width: 100%;
+}
+
+nav{	
+	display: flex;
+	flex-direction: row;
+	background-color: #202020;
+	align-items: center;
+}
+
+nav a{
+	color: white;
+	font-family: Roboto, Arial, sans-serif;
+	text-decoration: none;
+	padding: 15px 20px;
+}
+
+nav a:hover{
+	text-decoration: underline;
+	font-size: 17px;
+}
+
+nav a .logo{
+	width: 200px;
+}
+
+@media screen and (max-width: 640px){
+	nav{
+	flex-direction: column;
+	text-align: center;
+  }
+} 
+
+section{
+	align-content: center;
+	text-align: center;
+	width: 560px;
+	margin-left: auto;
+	margin-right: auto;	
+}
+
+h2{
+	color: white;
+	width: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+}
+
+p{
+	color: white;
+	width: 30px;
+	line-height: 25px;
+	margin-left: auto;
+	margin-right: auto;
+	align-content: center;
+	border: 2px solid grey;
+	border-radius: 10px;
+}
+
+.flex-container{
+	display: flex;
+	flex-wrap: wrap;
+	box-shadow: 1px 1px 15px grey;
+}
+
+.item_white{
+	background: #FFF;
+	width: 70px;
+	height: 70px;
+	text-align: center;
+	border: 1px solid grey;
+}
+
+.item_black{
+	background: #000;
+	width: 70px;
+	height: 70px;
+	text-align: center;
+	border: 1px solid grey;
+}
+
+.flex-container img{
+	width: 65px;
+	height: 65px;
+}
+
+@media screen and (max-width: 580px){
+	section{
+		width: 400px;
+	}
+	.item_white{
+		width: 50px;
+		height: 50px;
+	}
+	.item_black{
+		width: 50px;
+		height: 50px;
+	}
+	img{
+		width: 45px;
+		height: 45px;
+	}
+}
+
+@media screen and (max-width: 420px){
+	section{
+		width: 240px;
+	}
+	.item_white{
+		width: 30px;
+		height: 30px;
+	}
+	.item_black{
+		width: 30px;
+		height: 30px;
+	}
+	img{
+		width: 25px;
+		height: 25px;
+	}
+}
+
+.button{
+	width: 220px;
+	height: 52px;
+	margin-top: 20px;
+	border-radius: 12px;
+	font-family: Roboto, Arial, sans-serif;
+	background: #202020;
+	color: #FFF;
+	font-size: 18px;
+	cursor: pointer;
+	margin-bottom: 20px;
+	margin-top: 8px;
+	box-shadow: 1px 1px 15px grey;
+	border: 1px solid #84C5F3;
+}
+
+.button:hover{
+	font-size: 19px;
+}
+
+footer{
+	display: flex;
+	flex-direction: row;
+	background-color: #202020;
+}
+
+p2, p3{
+	margin:20px 20px;
+	color:#FFF;
+}
+
+p2 a{
+	text-decoration: none;
+	color: yellow;
+}
+
+p3{
+	margin-left: auto;
+}
+
+@media screen and (max-width: 675px)
+{
+	footer{
+		flex-direction: column;
+		text-align: center;
+	}
+	p3{
+		margin: auto;
+	}
 }
