--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -112,7 +112,7 @@ p{
 		width: 50px;
 		height: 50px;
 	}
-	img{
+	.flex-container img{
 		width: 45px;
 		height: 45px;
 	}
@@ -130,7 +130,7 @@ p{
 		width: 30px;
 		height: 30px;
 	}
-	img{
+	.flex-container img{
 		width: 25px;
 		height: 25px;
 	}
