--- a/style/estilos.css
+++ b/style/estilos.css
@@ -8,7 +8,7 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-image: url('../img/fondo_madera.jpg');
+	background-image: url('../img/FondoPrincipal.png');
 }
 
 header{
@@ -107,6 +107,7 @@ p{
 @media screen and (max-width: 580px){
 	section{
 		width: 400px;
+		height: 80%;
 	}
 	.casilla_blanca{
 		width: 46px;
@@ -125,6 +126,7 @@ p{
 @media screen and (max-width: 420px){
 	section{
 		width: 240px;
+		height: 70%;
 	}
 	.casilla_blanca{
 		width: 26px;
@@ -162,32 +164,39 @@ p{
 }
 
 footer{
-	display: flex;
-	flex-direction: row;
-	background-color: #202020;
+	width: 100%;
+	height: 60px;
+    background-color: #202020;
+	padding-top: 12px;
 }
 
-p2, p3{
-	margin:20px 20px;
-	color:#FFF;
+.derechos h4{
+	margin:5px 4px 5px 4px;
+    font-size: 15px;
+	color: wheat;
 }
 
-p2 a{
+h4 a{
 	text-decoration: none;
 	color: yellow;
 }
 
-p3{
-	margin-left: auto;
+.derechos{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 @media screen and (max-width: 675px)
 {
-	footer{
+	.derechos{
 		flex-direction: column;
 		text-align: center;
 	}
-	p3{
-		margin: auto;
+
+	h4{
+		font-size: 14px;
 	}
 }
+
