--- a/style/estilos.css
+++ b/style/estilos.css
@@ -339,6 +339,10 @@ input[type=submit]:hover{
 	background-color: rgb(0, 255, 42);
 }
 
+#fundamental{
+    display: none;
+}
+
 @media screen and (max-width: 630px){
 	.formulario{
 		width: 90%;
